tweak on config

--- a/Makefile.config
+++ b/Makefile.config
@@ -66,7 +66,7 @@ LIBRARY_DIRS := $(PYTHON_LIB) /home/jahausw/tools/opencv-2.4.9/install/lib /usr/
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
 # USE_PKG_CONFIG := 1
 
-BUILD_DIR := build
+BUILD_DIR := build-openmp
 DISTRIBUTE_DIR := distribute-openmp
 
 # Uncomment for debugging. Does not work on OSX due to https://github.com/BVLC/caffe/issues/171
