ldd doesn't show mkl, maybe its that runtime issue jhauswald/battle#35

--- a/Makefile.config
+++ b/Makefile.config
@@ -2,10 +2,10 @@
 # Contributions simplifying and improving our build system are welcome!
 
 # cuDNN acceleration switch (uncomment to build with cuDNN).
-USE_CUDNN := 1
+# USE_CUDNN := 1
 
 # CPU-only switch (uncomment to build without GPU support).
-# CPU_ONLY := 1
+CPU_ONLY := 1
 
 # To customize your choice of compiler, uncomment and set the following.
 # N.B. the default for Linux is g++ and the default for OSX is clang++
@@ -17,8 +17,9 @@ CUDA_DIR := /usr/local/cuda
 # "sudo apt-get install nvidia-cuda-toolkit" then use this instead:
 # CUDA_DIR := /usr
 
-# CUDA architecture setting: going with all of them.
-# For CUDA < 6.0, comment the *_50 lines for compatibility.
+# CUDA architecture setting: going with all of them (up to CUDA 5.5 compatible).
+# For the latest architecture, you need to install CUDA >= 6.0 and uncomment
+# the *_50 lines below.
 CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
 		-gencode arch=compute_20,code=sm_21 \
 		-gencode arch=compute_30,code=sm_30 \
@@ -30,16 +31,12 @@ CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
 # atlas for ATLAS (default)
 # mkl for MKL
 # open for OpenBlas
-BLAS := open
+BLAS := mkl
 # Custom (MKL/ATLAS/OpenBLAS) include and lib directories.
 # Leave commented to accept the defaults for your choice of BLAS
 # (which should work)!
-# BLAS_INCLUDE := /path/to/your/blas
-# BLAS_LIB := /path/to/your/blas
-
-# Homebrew puts openblas in a directory that is not on the standard search path
-# BLAS_INCLUDE := $(shell brew --prefix openblas)/include
-# BLAS_LIB := $(shell brew --prefix openblas)/lib
+BLAS_INCLUDE := /opt/intel/composer_xe_2015.3.187/mkl/include
+BLAS_LIB := /opt/intel/mkl/lib/intel64 /opt/intel/composer_xe_2015.3.187/compiler/lib/intel64/
 
 # This is required only if you will compile the matlab interface.
 # MATLAB directory should contain the mex binary in /bin.
@@ -49,7 +46,7 @@ BLAS := open
 # NOTE: this is required only if you will compile the python interface.
 # We need to be able to find Python.h and numpy/arrayobject.h.
 PYTHON_INCLUDE := /usr/include/python2.7 \
-		/usr/lib/python2.7/dist-packages/numpy/core/include
+		/usr/lib/python2.7/dist-packages/numpy/core/include \
 		/usr/local/lib/python2.7/dist-packages/numpy/core/include
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
@@ -62,37 +59,22 @@ PYTHON_INCLUDE := /usr/include/python2.7 \
 PYTHON_LIB := /usr/lib
 # PYTHON_LIB := $(ANACONDA_HOME)/lib
 
-# Homebrew installs numpy in a non standard path (keg only)
-# PYTHON_INCLUDE += $(dir $(shell python -c 'import numpy.core; print(numpy.core.__file__)'))/include
-# PYTHON_LIB += $(shell brew --prefix numpy)/lib
-
-# Uncomment to support layers written in Python (will link against Python libs)
-# WITH_PYTHON_LAYER := 1
-
 # Whatever else you find you need goes here.
-INCLUDE_DIRS := $(PYTHON_INCLUDE) /home/jahausw/cudnnv2 \
-	/home/jahausw/tools/opencv-2.4.9/install/include \
-	/usr/local/include
-LIBRARY_DIRS := $(PYTHON_LIB) /home/jahausw/cudnnv2 \
-	/home/jahausw/tools/opencv-2.4.9/install/lib \
-	/usr/local/lib /usr/lib
-
-# If Homebrew is installed at a non standard location (for example your home directory) and you use it for general dependencies
-# INCLUDE_DIRS += $(shell brew --prefix)/include
-# LIBRARY_DIRS += $(shell brew --prefix)/lib
+INCLUDE_DIRS := $(PYTHON_INCLUDE) /home/jahausw/tools/opencv-2.4.9/install/include /usr/local/include
+LIBRARY_DIRS := $(PYTHON_LIB) /home/jahausw/tools/opencv-2.4.9/install/lib /usr/local/lib /usr/lib
 
 # Uncomment to use `pkg-config` to specify OpenCV library paths.
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
 # USE_PKG_CONFIG := 1
 
-BUILD_DIR := build
-DISTRIBUTE_DIR := distribute
+BUILD_DIR := build-openmp
+DISTRIBUTE_DIR := distribute-openmp
 
 # Uncomment for debugging. Does not work on OSX due to https://github.com/BVLC/caffe/issues/171
 # DEBUG := 1
 
+# Uncomment for OpenMP.
+OPENMP := 1
+
 # The ID of the GPU that 'make runtest' will use to run unit tests.
 TEST_GPUID := 0
-
-# enable pretty build (comment to see full commands)
-Q ?= @
