mkl jhauswald/battle#35

--- a/Makefile.config
+++ b/Makefile.config
@@ -31,12 +31,12 @@ CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
 # atlas for ATLAS (default)
 # mkl for MKL
 # open for OpenBlas
-BLAS := open
+BLAS := mkl
 # Custom (MKL/ATLAS/OpenBLAS) include and lib directories.
 # Leave commented to accept the defaults for your choice of BLAS
 # (which should work)!
-# BLAS_INCLUDE := /opt/OpenBLAS/include
-# BLAS_LIB := /opt/OpenBLAS/lib
+BLAS_INCLUDE := /opt/intel/composer_xe_2015.3.187/mkl/include
+BLAS_LIB := /opt/intel/mkl/lib/intel64 /opt/intel/composer_xe_2015.3.187/compiler/lib/intel64/
 
 # This is required only if you will compile the matlab interface.
 # MATLAB directory should contain the mex binary in /bin.
