--- a/Makefile.config.cudnn
+++ b/Makefile.config.cudnn
@@ -30,12 +30,12 @@ CUDA_ARCH := -gencode arch=compute_20,code=sm_20 \
 # atlas for ATLAS (default)
 # mkl for MKL
 # open for OpenBlas
-BLAS := open
+BLAS := mkl
 # Custom (MKL/ATLAS/OpenBLAS) include and lib directories.
 # Leave commented to accept the defaults for your choice of BLAS
 # (which should work)!
-# BLAS_INCLUDE := /opt/intel/composer_xe_2015.3.187/mkl/include
-# BLAS_LIB := /opt/intel/mkl/lib/intel64 /opt/intel/composer_xe_2015.3.187/compiler/lib/intel64/
+BLAS_INCLUDE := /opt/intel/composer_xe_2015.3.187/mkl/include
+BLAS_LIB := /opt/intel/mkl/lib/intel64 /opt/intel/composer_xe_2015.3.187/compiler/lib/intel64/
 
 # Homebrew puts openblas in a directory that is not on the standard search path
 # BLAS_INCLUDE := $(shell brew --prefix openblas)/include
