--- a/Makefile.config.lstm
+++ b/Makefile.config.lstm
@@ -2,10 +2,10 @@
 # Contributions simplifying and improving our build system are welcome!
 
 # cuDNN acceleration switch (uncomment to build with cuDNN).
-USE_CUDNN := 1
+# USE_CUDNN := 1
 
 # CPU-only switch (uncomment to build without GPU support).
-# CPU_ONLY := 1
+CPU_ONLY := 1
 
 # To customize your choice of compiler, uncomment and set the following.
 # N.B. the default for Linux is g++ and the default for OSX is clang++
@@ -85,8 +85,8 @@ LIBRARY_DIRS := $(PYTHON_LIB) /home/jahausw/cudnnv2 \
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
 # USE_PKG_CONFIG := 1
 
-BUILD_DIR := build-cudnn
-DISTRIBUTE_DIR := distribute-cudnn
+BUILD_DIR := build-lstm
+DISTRIBUTE_DIR := distribute-lstm
 
 # Uncomment for debugging. Does not work on OSX due to https://github.com/BVLC/caffe/issues/171
 # DEBUG := 1
